# IC-NogGabMarc2

./: CMakeLists.txt  README.md  dconfig  doxyconfig  lixo
BitStream/: a.out  bitstream.cpp  bitstream.h  testBitStream.cpp
Golomb/: Golomb.cpp  Golomb.h  a.out
docs/html/: AudioCodec_8cpp_source.html  AudioCodec_8h_source.html  CMakeCCompilerId_8c_source.html  CMakeCXXCompilerId_8cpp_source.html  Golomb_8cpp_source.html  Golomb_8h_source.html  ImageCodec_8cpp_source.html  ImageCodec_8h_source.html  annotated.html  audio__test_8cpp_source.html  bitstream_8cpp_source.html  bitstream_8h_source.html  classAudioCodec-members.html  classAudioCodec.html  classGolomb-members.html  classGolomb.html  classImageCodec-members.html  classImageCodec.html  classbitstream-members.html  classbitstream.html  classes.html  dir_354ee67081fbadddd15d8e2567892ca3.html  dir_4008ba66dbfa501ee7f3e6a0cfee34bc.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_5280bb524ed5294135fd93e0b12dbd44.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7f7e439ba0927089503219129b4cf038.html  dir_a63dedf81f1e5ea1d42bb45ef831eb8c.html  dir_c6cf4bfd63a632082756befdb60f4fa4.html  dir_cf779efadf30e9c7d82da7dbe2eb33f7.html  feature__tests_8c_source.html  feature__tests_8cxx_source.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  hierarchy.html  index.html  (+4 more)
docs/latex/: AudioCodec_8cpp_source.tex  AudioCodec_8h_source.tex  Golomb_8cpp_source.tex  (+21 more)
predictor/: predictor.h
src/: a.out  audio_test.cpp  main_test.cpp
(+40 files in other folders)
